@@ -1,6 +1,8 @@
 SET(TARGET_NAME "cef_process")
 SET(TARGET_DIR ".")
 
+INCLUDE_DIRECTORIES(../include)
+
 INCLUDE_DIRECTORIES(${CEF_INC_DIR})
 LINK_DIRECTORIES (${CEF_LIB_DIR})
 
