@@ -1,4 +1,5 @@
-#include <cef_app.h>
+
+#include "App.h"
 #include <cef_client.h>
 
 // int main(int argc, char *argv[])
@@ -6,6 +7,9 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
 {
   CefMainArgs args(hInstance);
 
+  // Optional implementation of the CefApp interface.
+  CefRefPtr<cef::App> app(new cef::App);
+
   // MessageBox(NULL,"Starting SubProcess!","Info",MB_ICONERROR|MB_OK);
-  return CefExecuteProcess(args, NULL, NULL);
+  return CefExecuteProcess(args, app.get(), NULL);
 };
